--- a/Styles/_scroller.scss
+++ b/Styles/_scroller.scss
@@ -1,3 +1,11 @@
+// cubic-bezier(0.3, 0.7, 0.5, 1);
+// 0.55s cubic-bezier(0.15, 0.35, 0.35, 0.95); // Heavy
+// 0.55s cubic-bezier(0, 0.15, 0.35, 1.5); // Bouncing
+:root {
+  --scroller-cubic-bezier: cubic-bezier(0.15, 0.7, 0.35, 1);
+  --scroller-transition: 0.5s var(--scroller-cubic-bezier);
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -6,12 +14,12 @@ body {
   .scroller-main-cont {
     height: 100%; // As needed
     width: 100%; // As needed
-    // background-color: red; // Test
     position: relative;
     display: block;
     overflow: auto;
 
     &:not(.default-scroller) {
+      -ms-overflow-style: none;
       scrollbar-color: transparent transparent;
       scrollbar-width: none;
 
@@ -56,7 +64,6 @@ body {
               left: 0;
               z-index: 1;
               overflow: hidden;
-              // background-color: skyblue; // As needed
 
               > .sub-scroller-page {
                 height: 100%;
@@ -73,7 +80,6 @@ body {
               height: 100%;
               width: 100%;
               display: block;
-              // background-color: red; //As needed
             }
           }
         }
@@ -123,14 +129,10 @@ body {
           position: relative;
           top: 0;
           left: 0;
-          // transition: top 0.55s cubic-bezier(0.15, 0.35, 0.35, 0.95),
-          //   left 0.55s cubic-bezier(0.15, 0.35, 0.35, 0.95),
-          //   transform 0.55s cubic-bezier(0.15, 0.35, 0.35, 0.95); // Heavy
-          // transition: 0.55s cubic-bezier(0, 0.15, 0.35, 1.5); // Bouncing
-          transition: top 0.45s cubic-bezier(0.25, 0.7, 0.25, 0.95),
-            left 0.45s cubic-bezier(0.25, 0.7, 0.25, 0.95),
-            transform 0.45s cubic-bezier(0.25, 0.7, 0.25, 0.95); // Smooth
-          will-change: top, left;
+          transition: top var(--scroller-transition),
+            left var(--scroller-transition),
+            transform var(--scroller-transition); // Smooth
+          will-change: top, left, transform;
         }
       }
 
@@ -138,7 +140,6 @@ body {
       > .scrollbarY-cont {
         height: 100%;
         width: 100%;
-        // background-color: rgb(85, 59, 182);
         display: block;
         position: relative;
         z-index: 1;
@@ -151,10 +152,8 @@ body {
         background-color: rgba(245, 245, 245, 0.35);
         display: block;
         transform: translate(0, 0);
-        // transition: transform 0.55s cubic-bezier(0.15, 0.35, 0.35, 0.95); // Heavy
-        // transition: 0.55s cubic-bezier(0, 0.15, 0.35, 1.5); // Bouncing
-        transition: transform 0.45s cubic-bezier(0.25, 0.7, 0.25, 0.95),
-          background-color 0.45s cubic-bezier(0.25, 0.7, 0.25, 0.95); // Smooth
+        transition: transform var(--scroller-transition),
+          background-color 0.3s var(--scroller-cubic-bezier);
         will-change: transform;
         border-radius: 0.5vw;
         cursor: grab;
@@ -181,11 +180,12 @@ body {
 
   &.scroller-activated {
     user-select: none;
-    touch-action: none;
     cursor: grabbing;
 
-    .scroller-main-cont > .scroller-cont {
-      > .scroller-page-wrapper {
+    .scroller-main-cont {
+      touch-action: none;
+
+      > .scroller-cont > .scroller-page-wrapper {
         pointer-events: none;
       }
       > .scrollbarX-cont > .scrollbarX,
@@ -196,14 +196,8 @@ body {
   }
 }
 
-// Test
-// .scroller-page {
-//   background: repeating-linear-gradient(white 35%, rgb(175, 175, 175) 55%);
-// }
-// .sub-scroller-page {
-//   display: flex;
-//   h1 {
-//     width: 100vw;
-//     background-color: rgb(60, 102, 64);
-//   }
-// }
+@media screen and (max-width: 790px) {
+  :root {
+    --scroller-transition: 0.3s var(--scroller-cubic-bezier);
+  }
+}
