--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -50,7 +50,7 @@ body {
 
     .hero-sect {
       padding-top: 3.5vw;
-      height: 100vh;
+      height: 100svh;
       position: relative;
 
       .scroll-indicator {
@@ -109,7 +109,7 @@ body {
       }
 
       .cont-1 {
-        height: 250vh;
+        height: 250svh;
         width: 100%;
         background-color: rgb(55, 65, 145);
         position: relative;
@@ -140,7 +140,7 @@ body {
           align-items: flex-end;
 
           &.point1 {
-            margin-top: calc(100vh - 20vw);
+            margin-top: calc(100svh - 20vw);
             background-color: red;
 
             &::after {
@@ -149,7 +149,7 @@ body {
             }
           }
           &.point2 {
-            margin-top: 35vh;
+            margin-top: 35svh;
             background-color: red;
 
             &::after {
@@ -158,7 +158,7 @@ body {
             }
           }
           &.point3 {
-            margin-top: 30vh;
+            margin-top: 30svh;
             background-color: red;
 
             &::after {
@@ -168,7 +168,7 @@ body {
           }
           &.point4 {
             background-color: rgb(17, 155, 51);
-            margin-top: 45vh;
+            margin-top: 45svh;
 
             &::after {
               content: "Starting point";
@@ -205,7 +205,7 @@ body {
 
         .parallux-element {
           width: 100%;
-          height: 50vh;
+          height: 50svh;
           background-color: rgb(55, 65, 145);
           display: block;
         }
