--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -46,11 +46,9 @@ body {
   }
 
   main {
-    background-color: rgb(25, 25, 25); // For Chrome lagging problem
-
     .hero-sect {
       padding-top: 3.5vw;
-      height: 100svh;
+      height: 100vh;
       position: relative;
 
       .scroll-indicator {
@@ -109,26 +107,28 @@ body {
       }
 
       .cont-1 {
-        height: 250svh;
+        height: 250vh;
         width: 100%;
         background-color: rgb(55, 65, 145);
         position: relative;
 
-        .sticky {
-          .box {
-            height: 20vw;
-            width: 20vw;
-            background-color: rgb(245, 245, 245);
+        .box {
+          height: 20vw;
+          width: 20vw;
+          background-color: rgb(245, 245, 245);
+          position: sticky;
+          top: 0;
+          left: 0;
+          z-index: 1;
 
-            .anim-1 {
-              height: 50%;
-              width: 100%;
-              background-color: black;
-            }
-            .anim-3 {
-              height: 50%;
-              width: 100%;
-            }
+          .anim-1 {
+            height: 50%;
+            width: 100%;
+            background-color: black;
+          }
+          .anim-3 {
+            height: 50%;
+            width: 100%;
           }
         }
 
@@ -140,7 +140,7 @@ body {
           align-items: flex-end;
 
           &.point1 {
-            margin-top: calc(100svh - 20vw);
+            margin-top: calc(100vh - 20vw);
             background-color: red;
 
             &::after {
@@ -149,7 +149,7 @@ body {
             }
           }
           &.point2 {
-            margin-top: 35svh;
+            margin-top: 35vh;
             background-color: red;
 
             &::after {
@@ -158,7 +158,7 @@ body {
             }
           }
           &.point3 {
-            margin-top: 30svh;
+            margin-top: 30vh;
             background-color: red;
 
             &::after {
@@ -168,7 +168,7 @@ body {
           }
           &.point4 {
             background-color: rgb(17, 155, 51);
-            margin-top: 45svh;
+            margin-top: 45vh;
 
             &::after {
               content: "Starting point";
@@ -205,7 +205,7 @@ body {
 
         .parallux-element {
           width: 100%;
-          height: 50svh;
+          height: 50vh;
           background-color: rgb(55, 65, 145);
           display: block;
         }
