--- a/Styles/_scroller.scss
+++ b/Styles/_scroller.scss
@@ -56,7 +56,7 @@ body {
             display: block;
 
             > .sub-scroller-cont {
-              height: 100vh;
+              height: 100svh;
               width: 100%;
               display: grid;
               position: sticky;
